# my_simple_rent

./: Makefile  README.md  manage.py  pyproject.toml  requirements.txt
my_simple_rent/: asgi.py  settings.py  urls.py  wsgi.py
